--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -19,6 +19,10 @@
     <modules>
         <module>gmall-admin</module>
         <module>gmall-common</module>
+        <module>gmall-sms</module>
+        <module>gmall-pms</module>
+        <module>gmall-wms</module>
+        <module>gmall-ums</module>
     </modules>
 
     <properties>
