--- a/gmall/gmall-oms/pom.xml
+++ b/gmall/gmall-oms/pom.xml
@@ -11,12 +11,6 @@
 
     <artifactId>gmall-oms</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-cloud-alibaba.version>2.2.0.RELEASE</spring-cloud-alibaba.version>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>com.learn</groupId>
@@ -65,6 +59,11 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>3.5.2</version>
         </dependency>
     </dependencies>
 
