--- a/gmall/gmall-pms/src/main/resources/application.yml
+++ b/gmall/gmall-pms/src/main/resources/application.yml
@@ -4,18 +4,19 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: localhost:8848
     sentinel:
       transport:
         dashboard: localhost:8080
         port: 8719
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/guli_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://192.168.176.128:3306/guli_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
-    password: root
+    password: 123456
   redis:
-    host: localhost
+    host: 192.168.176.128
+    port: 6379
   zipkin:
     base-url: http://localhost:9411
     discovery-client-enabled: false
@@ -25,7 +26,7 @@ spring:
     sampler:
       probability: 1
 mybatis-plus:
-  mapper-locations: classpath:mapper/pms/*.xml  # 读取映射文件
+  mapper-locations: classpath:mapper/pms/**/*.xml  # 读取映射文件
   type-aliases-package: com.learn.gmall.pms.entity #别名扫描, 不用写全类名
   global-config:
     db-config:
