--- a/gmall/gmall-pms/src/main/resources/bootstrap.yml
+++ b/gmall/gmall-pms/src/main/resources/bootstrap.yml
@@ -5,3 +5,6 @@ spring:
     nacos:
       config:
         server-addr: 127.0.0.1:8848
+        namespace: 5e34466d-0a56-4ff7-8d63-2d3f805a4e34
+        group: dev
+        file-extension: yml
