--- a/gmall/gmall-pms/pom.xml
+++ b/gmall/gmall-pms/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.15.2</version>
+        </dependency>
     </dependencies>
 
     <build>
