--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -25,6 +25,7 @@
         <module>gmall-ums</module>
         <module>gmall-oms</module>
         <module>gmall-gateway</module>
+        <module>gmall-sms-interface</module>
     </modules>
 
     <properties>
