--- a/gmall/gmall-ums/src/main/resources/application.yml
+++ b/gmall/gmall-ums/src/main/resources/application.yml
@@ -11,11 +11,11 @@ spring:
         port: 8719
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/guli_ums?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://192.168.176.128:3306/guli_ums?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
-    password: root
+    password: 123456
   redis:
-    host: localhost
+    host: 192.168.176.128
   zipkin:
     base-url: http://localhost:9411
     discovery-client-enabled: false
@@ -25,7 +25,7 @@ spring:
     sampler:
       probability: 1
 mybatis-plus:
-  mapper-locations: classpath:mapper/ums/*.xml  # 读取映射文件
+  mapper-locations: classpath:mapper/ums/**/*.xml  # 读取映射文件
   type-aliases-package: com.learn.gmall.ums.entity #别名扫描, 不用写全类名
   global-config:
     db-config:
