--- a/gmall/gmall-pms/src/main/resources/application.yml
+++ b/gmall/gmall-pms/src/main/resources/application.yml
@@ -38,3 +38,10 @@ feign:
 logging:
   level:
     org.springframework: debug #提升范围, 为了看到事务创建
+seata:
+  tx-service-group: gmall-tx-group
+  service:
+    vgroup-mapping:
+      gmall-tx-group: default
+    grouplist:
+      default: localhost:8091
