--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -26,6 +26,8 @@
         <module>gmall-oms</module>
         <module>gmall-gateway</module>
         <module>gmall-sms-interface</module>
+        <module>gmall-search</module>
+        <module>gmall-pms-interface</module>
     </modules>
 
     <properties>
