搜索功能搭建

--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -28,6 +28,7 @@
         <module>gmall-sms-interface</module>
         <module>gmall-search</module>
         <module>gmall-pms-interface</module>
+        <module>gmall-wms-interface</module>
     </modules>
 
     <properties>
