--- a/gmall/gmall-wms-interface/pom.xml
+++ b/gmall/gmall-wms-interface/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>gmall-pms-interface</artifactId>
-
+    <artifactId>gmall-wms-interface</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.learn</groupId>
