--- a/gmall/gmall-gateway/src/main/resources/application.yml
+++ b/gmall/gmall-gateway/src/main/resources/application.yml
@@ -4,26 +4,38 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: localhost:8848
     gateway:
       routes:
-        - id: pms-route # 商品管理路由
+        - id: pms-route
           uri: lb://pms-service
           predicates:
             - Path=/pms/**
-        - id: oms-route # 订单管理路由
-          uri: lb://oms-service
-          predicates:
-            - Path=/oms/**
-        - id: ums-route # 用户管理路由
-          uri: lb://ums-service
-          predicates:
-            - Path=/ums/**
-        - id: wms-route # 仓库管理路由
-          uri: lb://wms-service
-          predicates:
-            - Path=/wms/**
-        - id: sms-route # 营销管理路由
+        - id: sms-route
           uri: lb://sms-service
           predicates:
             - Path=/sms/**
+        - id: ums-route
+          uri: lb://ums-service
+          predicates:
+            - Path=/ums/**
+        - id: wms-route
+          uri: lb://wms-service
+          predicates:
+            - Path=/wms/**
+        - id: oms-route
+          uri: lb://oms-service
+          predicates:
+            - Path=/oms/**
+        - id: search-route
+          uri: lb://search-service
+          predicates:
+            - Path=/search
+        - id: index-route # 同步请求配置路由，跳转到首页
+          uri: lb://index-service
+          predicates:
+            - Host=gmall.com, www.gmall.com
+        - id: index-route2 # 异步请求配置路由，通过ajax请求加载数据
+          uri: lb://index-service
+          predicates:
+            - Path=/index/**
