--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -29,6 +29,8 @@
         <module>gmall-search</module>
         <module>gmall-pms-interface</module>
         <module>gmall-wms-interface</module>
+        <module>gmall-index</module>
+        <module>gmall-item</module>
     </modules>
 
     <properties>
