商品页搭建

--- a/gmall/gmall-gateway/src/main/resources/application.yml
+++ b/gmall/gmall-gateway/src/main/resources/application.yml
@@ -39,3 +39,7 @@ spring:
           uri: lb://index-service
           predicates:
             - Path=/index/**
+        - id: item-service # 异步请求配置路由，通过ajax请求加载数据
+          uri: lb://item-service
+          predicates:
+            - Host=item.gmall.com
