--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -31,6 +31,8 @@
         <module>gmall-wms-interface</module>
         <module>gmall-index</module>
         <module>gmall-item</module>
+        <module>gmall-auth</module>
+        <module>gmall-ums-interface</module>
     </modules>
 
     <properties>
