用户登录  单点登录 授权中心 跳转登录页

--- a/gmall/gmall-gateway/src/main/resources/application.yml
+++ b/gmall/gmall-gateway/src/main/resources/application.yml
@@ -43,3 +43,7 @@ spring:
           uri: lb://item-service
           predicates:
             - Host=item.gmall.com
+        - id: auth-service # 异步请求配置路由，通过ajax请求加载数据
+          uri: lb://auth-service
+          predicates:
+            - Host=sso.gmall.com
