--- a/gmall/gmall-gateway/src/main/resources/application.yml
+++ b/gmall/gmall-gateway/src/main/resources/application.yml
@@ -51,6 +51,10 @@ spring:
           uri: lb://auth-service
           predicates:
             - Host=sso.gmall.com
+        - id: cart-route
+          uri: lb://cart-service
+          predicates:
+            - Host=cart.gmall.com
 jwt:
   token: token
   cookieName: GMALL-TOKEN
