--- a/gmall/gmall-sms/src/main/resources/bootstrap.yml
+++ b/gmall/gmall-sms/src/main/resources/bootstrap.yml
@@ -4,4 +4,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 127.0.0.1:8848
+        server-addr: localhost:8848
+        namespace: be64c449-bb49-4537-a2f7-6c91eca7c792
+        group: dev
+        file-extension: yml
