--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -34,6 +34,7 @@
         <module>gmall-auth</module>
         <module>gmall-ums-interface</module>
         <module>gmall-cart</module>
+        <module>gmall-scheduled</module>
     </modules>
 
     <properties>
