--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -37,6 +37,7 @@
         <module>gmall-scheduled</module>
         <module>gmall-order</module>
         <module>gmall-cart-interface</module>
+        <module>gmall-oms-interface</module>
     </modules>
 
     <properties>
