--- a/gmall/gmall-wms/src/main/resources/application.yml
+++ b/gmall/gmall-wms/src/main/resources/application.yml
@@ -36,6 +36,8 @@ spring:
         acknowledge-mode: manual
         prefetch: 1
         concurrency: 6
+    publisher-confirm-type: correlated
+    publisher-returns: true
 mybatis-plus:
   mapper-locations: classpath:mapper/wms/**/*.xml  # 读取映射文件
   type-aliases-package: com.learn.gmall.wms.entity #别名扫描, 不用写全类名
